# brain-mdd

./: .gitignore  README.md  app.py  channels_mapping.json  classification.ipynb  classification_hyperparam.ipynb  classification_hyperparam_norm copy.ipynb  classification_hyperparam_norm.ipynb  feature_extraction.ipynb  feature_names.json  fusedfeature_classification.ipynb  inspect_result.ipynb  main.ipynb  main_cd.ipynb  main_coherence.ipynb  main_hfd.ipynb  main_phase.ipynb  main_psd.ipynb  model_performance.csv  move_epoch_to_label_dir.sh  prepare_epoch.ipynb  setup.cfg  testmodelonpredct.ipynb
brainmdd/buffer/: windowbuffer.py
brainmdd/commonutils/: abstractbuffer.py  abstractthread.py
brainmdd/features/: coherence.py  correlationdimension.py  csp.py  hfd.py  phaseconnectivity.py  psd.py  psd_subband.py
models/CD/: Decision Tree.pkl  KNN.pkl  LDA.pkl  Logistic Regression.pkl  Random Forest.pkl  SVM.pkl
sandbox/: balanced_data.ipynb  finalized_model.sav  inspectdata.ipynb  stats.ipynb
sandbox/feature_main/: main_psd.ipynb  temp_main.ipynb
