[metadata]
name = brainmdd
version = 1.0.0
description = MMD classifiers using EEG data
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
    pip == 24.2.0
    numpy == 2.1.3
    pandas == 2.2.3
    matplotlib == 3.9.2
    mne == 1.8.0
    scikit-learn == 1.5.2
    icecream == 2.1.3
    openpyxl == 3.1.5
    seaborn = 0.13.2